# dissectBCL

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  ChangeLog  README.md  TODO.md  contaminome.yml  dissectBCL.ini  env.yml  pyproject.toml  setup.cfg  setup.py
.eggs/pbr-5.11.1-py3.9.egg/EGG-INFO/: RECORD
.github/: contributing.md  pull_request_template.md
.github/workflows/: docs.yml  flake.yml  lint.yml  pytest.yml  release-please.yml
dissectBCL/: FQ.py  classes.py  demux.py  dissect.py  drHouse.py  fakeNews.py  flowCellClass.py  logger.py  misc.py  postmux.py  preFQ.py  sampleSheets.py
dissectBCL/dissectBCL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dissectBCL/templates/: PEhead.tex  PEtable.tex  PairedEndTab.tex  SequencingReport.tex  SingleEndTab.tex
docs/: conf.py  config.rst  executables.rst  index.rst  overview.rst  requirements.txt  usage.rst
src/dissectBCL/: .fakeNews.py.swp  .flowcell.py.swp  _version.py  classes.py  demux.py  dissect.py  drHouse.py  fakeNews.py  flowcell.py  logger.py  misc.py  postmux.py
src/tools/: emailProjectFinished.py  prep_contaminome.py
src/wd40/: cat.py  diagnose.py  misc.py  release.py  wd40.py
tests/: misc  test.py  test_contam.py  test_demux.py  test_detmask.py  test_misc.py  todo.md
tests/test_demux/: demuxSheet.csv  dualIx_1.tsv  dualIx_2.tsv  dualIx_3.tsv  dualIx_aviti_1.tsv  dualIx_aviti_2.tsv  dualIx_aviti_3.tsv  nugen.tsv  scatac_2.tsv  scatac_3.tsv  scatac_aviti1.tsv  scatac_aviti2.tsv  scatac_aviti3.tsv
tests/test_detmask/: noindex.tsv  scatac.tsv
tests/test_misc/: dissectBCL.ini
tests/testdata/: RunInfo.xml
