[metadata]
name = dissectBCL
description = demuliplexing illumina data
long_description = file: README.md
keywords = demultiplexing, illumina
license = MIT
url = https://www.github.com/maxplanck-ie/dissectBCL
author = WardDeb
author_email = deboutte@ie-freiburg.mpg.de


[options]
package_dir =
  = src
python_requires = >=3.7


[options.entry_points]
console_scripts =
  dissect = dissectBCL.dissect:dissect
  wd40 = wd40.wd40:cli
  email = tools.emailProjectFinished:main
  contam = tools.prep_contaminome:main
